Support both auth-code and implicit flows

--- a/OidcTestWeb/appsettings.json
+++ b/OidcTestWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
     "OpenIdConnect": {
-        "Domain": "",
+        "Authority": "",
         "ClientId": "",
         "ClientSecret": "",
         "RedirectUri": ""
