--- a/OidcTestWeb/appsettings.json
+++ b/OidcTestWeb/appsettings.json
@@ -3,7 +3,8 @@
         "Authority": "",
         "ClientId": "",
         "ClientSecret": "",
-        "RedirectUri": ""
+        "RedirectUri": "",
+        "Scopes": "openid profile email groups"
     },
     "Logging": {
         "LogLevel": {
